fix: add black color to buttons on iphone devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ html {
     margin: 0;
     padding: 0;
     border: none;
+    -webkit-appearance: none;
 }
 
 :root{
@@ -55,7 +56,7 @@ h1,h2,h2 {
     font-family: inherit;
     text-transform: uppercase;
     cursor: pointer;
-    -webkit-appearance: none;
+    color: var(--black);
 }
 
 .btn:hover{
